--- a/main.css
+++ b/main.css
@@ -28,3 +28,17 @@ a {
     text-decoration: none; 
     color: white;
 }
+
+ul {
+    background-color:white;
+    height: 200px;
+
+
+}
+
+nav {
+
+    background-color: black;
+    height: 200px;
+
+}
