--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ nav {
     height: 200px;
 
     text-decoration: none; 
-    color: white;
+    color: red;
 
     text-align: center;
     padding: 40px;
