--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
 
-    height: 100px;
-    background-color: white;
+    height: 1300px;
+    background-color: red;
     margin: 0;
 padding: 0;
 
@@ -31,7 +31,8 @@ a {
 
 ul {
     background-color:white;
-    height: 200px;
+    height: 400px;
+    margin: 0;
 
 
 }
@@ -39,7 +40,7 @@ ul {
 nav {
 
     background-color: black;
-    height: 200px;
+    height: 400px;
 
     text-decoration: none; 
     color: white;
