--- a/main.css
+++ b/main.css
@@ -56,9 +56,10 @@ nav {
 .div1 {
 
     float: right;
-border: 3px solid blue;
+border: 3px solid black;
 width: 150px;
 margin: auto;
+text-align: center;
 
 }
 
@@ -66,15 +67,17 @@ margin: auto;
 
 display: block;
 float: left;
-border: 3px solid blue;
+border: 3px solid black;
 width: 150px;
 margin: auto;
+text-align: center;
 }
 .div3 {
    
-    border: 3px solid blue;
+    border: 3px solid black;
     width: 150px;
     margin: auto;
+    text-align: center;
      
 
     
