--- a/main.css
+++ b/main.css
@@ -50,20 +50,20 @@ nav {
 
 }
 
-
+.divpascal {
+    border: 5px solid black;
+    width: 150px;
+    height: 50px;
+    
+}
 
 
 .div1 {
 
 
-border: 5px solid black;
-width: 150px;
+
 margin: auto;
 text-align: center;
-height: 50px;
-vertical-align: text-top;
-display: table-cell;
-vertical-align: middle;
 
 
 
@@ -72,30 +72,24 @@ vertical-align: middle;
 
  .div2 {
 
-border: 5px solid black;
-width: 150px;
-height: 50px;
+
 margin: auto;
 text-align: center;
-display: table-cell;
-vertical-align: middle;
-
 }
 .div3 {
    
-    border: 5px solid black;
-    width: 150px;
+  
     margin: auto;
     text-align: center;
-    height: 50px;
-    display: table-cell;
-    vertical-align: middle;
  
   }
      
 
 .container {
 padding: 150px;
+display: flex;
+    column-gap: 30px;
+    justify-content: center;
 }
 
 section {
