--- a/main.css
+++ b/main.css
@@ -9,16 +9,48 @@ padding: 0;
 
 header {
 height: 70px;
-background-color: black;
-padding: 0px;
-color:red;
+background-color: white;
+padding: 0px;¨
+
+
 
 }
+
+/
+  .topnav a.active {
+    background-color: black;
+    color: white;
+  }
+  
+  .topnav input[type=text] {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 20px;
+    margin-right: 20px;
+    font-size: 16px;
+    background-color: grey;
+    color: white
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a, .topnav input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    .topnav input[type=text] {
+      border: 1px solid #ccc;
+    }
+  }
 
 header li {
 
     margin: 20px;;
-    color:rgb(255, 255, 255);
+    color:rgb(0,0,0);
     font-size: 20px;
     float: left;
     display: flex;
@@ -26,7 +58,7 @@ header li {
 
 a {
     text-decoration: none; 
-    color: white;
+    color: black;
 }
 
 ul {
@@ -39,11 +71,11 @@ ul {
 
 nav {
 
-    background-color: black;
+    background-color: white;
     height: 400px;
 
     text-decoration: none; 
-    color: white;
+    color: black;
 
     text-align: center;
     padding: 40px;
@@ -64,6 +96,7 @@ nav {
 
 margin: auto;
 text-align: center;
+background-color: white;
 
 
 
@@ -75,13 +108,14 @@ text-align: center;
 
 margin: auto;
 text-align: center;
+background-color: white;
 }
-.div3 {
-   
-  
-    margin: auto;
-    text-align: center;
- 
+
+
+.pascal {
+    
+height: 300px;
+
   }
      
 
@@ -90,13 +124,16 @@ padding: 150px;
 display: flex;
     column-gap: 30px;
     justify-content: center;
+    background-color: black;
+    
+    
 }
 
 footer {
  
     height: 75px   ;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     text-align: center;
 }
 
@@ -104,7 +141,7 @@ footer {
 
     height:100vh;
     width: 100%;
-    background:white;
+    background:black;
     display: flex;
     align-items: center;
     justify-content: center;
