--- a/main.css
+++ b/main.css
@@ -82,50 +82,37 @@ nav {
 
 }
 
-.divpascal {
-    border: 5px solid black;
-    width: 150px;
-    height: 50px;
-    
-}
 
-
-.div1 {
-
-
-
-margin: auto;
-text-align: center;
-background-color: white;
-
-
-
-
-}
-
- .div2 {
-
-
-margin: auto;
-text-align: center;
-background-color: white;
-}
 
 
 .pascal {
     
-height: 300px;
+height: 50px;
+width: 120px;
 
   }
-     
 
-.container {
-padding: 150px;
-display: flex;
-    column-gap: 30px;
-    justify-content: center;
-    background-color: black;
+  .pascal1 {
     
+    height: 50px;
+    width: 120px;
+    
+      }
+     
+      .pascal2 {
+    
+        height: 50px;
+        width: 120px;
+        
+          }
+
+          .container {
+            padding: 150px;
+            display: flex;
+                column-gap: 30px;
+                justify-content: center;
+                background-color: black;
+                
     
 }
 
