--- a/games.css
+++ b/games.css
@@ -1,12 +1,19 @@
 
 
-}
 
+body {
+
+  height: 800px;
+  background-color: white;
+  margin: 0;
+padding: 0;
+
+}
 
 header {
 height: 70px;
 background-color: white;
-padding: 0px;¨
+padding: 0px;
 
 
 
@@ -28,7 +35,7 @@ a {
 }
 
 
-/
+
   .topnav a.active {
     background-color: black;
     color: white;
@@ -59,26 +66,59 @@ a {
     }
   }
 
-  
-.container1 {
+  .container-information{
 
-    height:100vh;
-    width: 100%;
-    background:black;
+    padding: 5px;
     display: flex;
-    align-items: center;
+        column-gap: 100px;
+        justify-content: center;
+  }
+  .container-knappar{
+
+    padding: 20px;
+    display: flex;
+        column-gap: 350px;
+        justify-content: center;
+        
+  }
+  
+  footer {
+ 
+    height: 75px   ;
+    background-color: white;
+    color: black;
+    text-align: center;
+}
+
+
+.container-slideshow{
+
+    display: inline-block;
+    width: 100%;¨
+    height: 10%;
+    display: flex;
     justify-content: center;
-
-
-
-
+    column-gap: 100px;
 
 }
 
+.pascal {
+    
+  height: 50px;
+  width: 120px;
+  background-color: green;
+  font-size: medium;
+    }
+    
+
+          
+
+
+
 .swiper{
 
-width: 80%;
-height: fit-content;
+width: 100%;
+ height: fit-content; 
 
 
 
@@ -95,4 +135,9 @@ height: fit-content;
 
 color: white;
 
+
 }
+  
+  
+
+
