--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-body {
+body  {
 
     height: 1300px;
     background-color: white;
@@ -59,6 +59,16 @@ a {
     .topnav input[type=text] {
       border: 1px solid #ccc;
     }
+  }
+
+  
+  a:hover{
+
+  color: black;
+  background-color:grey
+
+
+
   }
 
 
@@ -129,6 +139,7 @@ footer {
     color: black;
     text-align: center;
 }
+
 
 .container1 {
 
