--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ padding: 0;
 header {
 height: 70px;
 background-color: white;
-padding: 0px;¨
+padding: 0px;
 
 
 
@@ -18,7 +18,7 @@ padding: 0px;¨
 
 header li {
 
-  margin: 20px;;
+  margin: 20px;
   color:rgb(0,0,0);
   font-size: 20px;
   float: left;
@@ -30,7 +30,6 @@ a {
   color: black;
 }
 
-/
   .topnav a.active {
     background-color: black;
     color: white;
@@ -93,6 +92,77 @@ nav {
 
 }
 
+.container4 {
+  text-align: center;
+  position: absolute;
+  width: 80px;
+  height: 30px;
+  top:50%
+  
+  
+  }
+  
+  switch{
+  
+    position: relative;
+    display: inline-block;
+    width: 110px;
+    height: 60px;
+    margin: 0 10px;
+  
+  
+  }
+  
+  .slider{
+  
+  
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .4s;
+  border-radius: 34px;
+  
+  }
+  
+  .switch input {display: none;}
+    
+  .slider:before
+  {
+  
+  position: absolute;
+  content: "";
+  height: 30px;
+  width: 30px;
+  left: 5px;
+  background-color: grey;
+  transition: 0,4s;
+  border-radius: 50px;
+  }
+  
+  input:checked + .slider
+  {
+  
+  background-color: black;
+  
+  
+  
+  }
+  
+  input:checked + .slider:before
+  {
+  
+  transform: translateX(50px);
+  
+  
+  
+  }
+  
+  
+  
 
 
 
@@ -182,7 +252,6 @@ position: absolute;
 width: 80px;
 height: 30px;
 top:50%
-left:50%
 
 
 }
