--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body  {
     margin: 0;
 padding: 0;
 
+
 }
 
 header {
@@ -18,7 +19,7 @@ padding: 0px;
 }
 
 header li {
-
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 20px;;
   color:rgb(0,0,0);
   font-size: 20px;
@@ -176,75 +177,4 @@ height: fit-content;
 
 color: white;
 }
-
-.container4 {
-text-align: center;
-position: absolute;
-width: 80px;
-height: 30px;
-top:50%
-left:50%
-
-
-}
-
-switch{
-
-  position: relative;
-  display: inline-block;
-  width: 110px;
-  height: 60px;
-  margin: 0 10px;
-
-
-}
-
-.slider{
-
-
-position: absolute;
-cursor: pointer;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-background-color: #ccc;
-transition: .4s;
-border-radius: 34px;
-
-}
-
-.switch input {display: none;}
-  
-.slider:before
-{
-
-position: absolute;
-content: "";
-height: 30px;
-width: 30px;
-left: 5px;
-background-color: grey;
-transition: 0,4s;
-border-radius: 50px;
-}
-
-input:checked + .slider
-{
-
-background-color: black;
-
-
-
-}
-
-input:checked + .slider:before
-{
-
-transform: translateX(50px);
-
-
-
-}
-
 
