--- a/main.css
+++ b/main.css
@@ -1,9 +1,10 @@
 body  {
 
-    height: 1300px;
-    background-color: white;
-    margin: 0;
+  height: 1300px;
+  background-color: white;
+  margin: 0;
 padding: 0;
+
 
 }
 
@@ -18,208 +19,138 @@ padding: 0px;
 }
 
 header li {
-
-  margin: 20px;
-  color:rgb(0,0,0);
-  font-size: 20px;
-  float: left;
-  display: flex;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+margin: 20px;;
+color:rgb(0,0,0);
+font-size: 20px;
+float: left;
+display: flex;
 }
 
 a {
-  text-decoration: none; 
-  color: black;
+text-decoration: none; 
+color: black;
 }
 
-  .topnav a.active {
-    background-color: black;
-    color: white;
+/
+.topnav a.active {
+  background-color: black;
+  color: white;
+}
+
+.topnav input[type=text] {
+  float: right;
+  padding: 6px;
+  border: none;
+  margin-top: 20px;
+  margin-right: 20px;
+  font-size: 16px;
+  background-color: grey;
+  color: white
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
   }
-  
   .topnav input[type=text] {
-    float: right;
-    padding: 6px;
-    border: none;
-    margin-top: 20px;
-    margin-right: 20px;
-    font-size: 16px;
-    background-color: grey;
-    color: white
+    border: 1px solid #ccc;
   }
-  
-  @media screen and (max-width: 600px) {
-    .topnav a, .topnav input[type=text] {
-      float: none;
-      display: block;
-      text-align: left;
-      width: 100%;
-      margin: 0;
-      padding: 14px;
-    }
-    .topnav input[type=text] {
-      border: 1px solid #ccc;
-    }
-  }
+}
 
-  
-  a:hover{
 
-  color: black;
-  background-color:grey
+a:hover{
+
+color: black;
+background-color:grey
 
 
 
-  }
+}
 
 
 ul {
-    background-color:white;
-    height: 400px;
-    margin: 0;
+  background-color:white;
+  height: 400px;
+  margin: 0;
 
 
 }
 
 nav {
 
-    background-color: white;
-    height: 400px;
+  background-color: white;
+  height: 400px;
 
-    text-decoration: none; 
-    color: black;
+  text-decoration: none; 
+  color: black;
 
-    text-align: center;
-    padding: 40px;
+  text-align: center;
+  padding: 40px;
 
 }
 
-.container4 {
-  text-align: center;
-  position: absolute;
-  width: 80px;
-  height: 30px;
-  top:50%
-  
-  
-  }
-  
-  switch{
-  
-    position: relative;
-    display: inline-block;
-    width: 110px;
-    height: 60px;
-    margin: 0 10px;
-  
-  
-  }
-  
-  .slider{
-  
-  
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: .4s;
-  border-radius: 34px;
-  
-  }
-  
-  .switch input {display: none;}
-    
-  .slider:before
-  {
-  
-  position: absolute;
-  content: "";
-  height: 30px;
-  width: 30px;
-  left: 5px;
-  background-color: grey;
-  transition: 0,4s;
-  border-radius: 50px;
-  }
-  
-  input:checked + .slider
-  {
-  
-  background-color: black;
-  
-  
-  
-  }
-  
-  input:checked + .slider:before
-  {
-  
-  transform: translateX(50px);
-  
-  
-  
-  }
-  
-  
-  
 
 
 
 .pascal {
-    
+  
 height: 50px;
 width: 120px;
 background-color: white;
 font-size: medium;
-  }
+}
 
-  .pascal1 {
-    
-    height: 50px;
-    width: 120px;
-    background-color: white;
-    font-size: medium;
-      }
-     
-      .pascal2 {
-    
-        height: 50px;
-        width: 120px;
-        background-color: white;
-        font-size: medium;
+.pascal1 {
+  
+  height: 50px;
+  width: 120px;
+  background-color: white;
+  font-size: medium;
+    }
+   
+    .pascal2 {
+  
+      height: 50px;
+      width: 120px;
+      background-color: white;
+      font-size: medium;
 
-        
-          }
+      
+        }
 
-          .container {
-            padding: 150px;
-            display: flex;
-                column-gap: 60px;
-                justify-content: center;
-                background-color: black;
-                
-    
+        .container {
+          padding: 150px;
+          display: flex;
+              column-gap: 60px;
+              justify-content: center;
+              background-color: black;
+              
+  
 }
 
 footer {
- 
-    height: 75px   ;
-    background-color: white;
-    color: black;
-    text-align: center;
+
+  height: 75px   ;
+  background-color: white;
+  color: black;
+  text-align: center;
 }
 
 
 .container1 {
 
-    height:100vh;
-    width: 100%;
-    background:black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  height:100vh;
+  width: 100%;
+  background:black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
 
 
@@ -237,8 +168,8 @@ height: fit-content;
 
 .swiper-slide img{
 
-    width: 100%;
-    
+  width: 100%;
+  
 
 
 }
@@ -246,4 +177,3 @@ height: fit-content;
 
 color: white;
 }
-
