--- a/main.css
+++ b/main.css
@@ -1,7 +1,14 @@
+:root {
+  --black:#000000;
+  --white: #ffffff;
+}
+
+
+
 body  {
 
     height: 1300px;
-    background-color: white;
+    background-color:var(--white);
     margin: 0;
 padding: 0;
 
@@ -10,7 +17,7 @@ padding: 0;
 
 header {
 height: 70px;
-background-color: white;
+background-color:var(--white);
 padding: 0px;
 
 
@@ -21,7 +28,7 @@ padding: 0px;
 header li {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 20px;;
-  color:rgb(0,0,0);
+  color:var(--black);
   font-size: 20px;
   float: left;
   display: flex;
@@ -29,13 +36,12 @@ header li {
 
 a {
   text-decoration: none; 
-  color: black;
+  color: var(--black);;
 }
 
-/
   .topnav a.active {
-    background-color: black;
-    color: white;
+    background-color:var(--black);
+    color: var(--white);
   }
   
   .topnav input[type=text] {
@@ -46,7 +52,7 @@ a {
     margin-right: 20px;
     font-size: 16px;
     background-color: grey;
-    color: white
+    color:var(--white);
   }
   
   @media screen and (max-width: 600px) {
@@ -66,7 +72,7 @@ a {
   
   a:hover{
 
-  color: black;
+  color: var(--black);
   background-color:grey
 
 
@@ -75,8 +81,8 @@ a {
 
 
 ul {
-    background-color:white;
-    height: 400px;
+  background-color:var(--white);
+  height: 400px;
     margin: 0;
 
 
@@ -84,8 +90,8 @@ ul {
 
 nav {
 
-    background-color: white;
-    height: 400px;
+  background-color:var(--white);
+  height: 400px;
 
     text-decoration: none; 
     color: black;
@@ -102,7 +108,7 @@ nav {
     
 height: 50px;
 width: 120px;
-background-color: white;
+background-color:var(--white);
 font-size: medium;
   }
 
@@ -110,7 +116,7 @@ font-size: medium;
     
     height: 50px;
     width: 120px;
-    background-color: white;
+    background-color:var(--white);
     font-size: medium;
       }
      
@@ -118,7 +124,7 @@ font-size: medium;
     
         height: 50px;
         width: 120px;
-        background-color: white;
+        background-color:var(--white);
         font-size: medium;
 
         
@@ -129,7 +135,7 @@ font-size: medium;
             display: flex;
                 column-gap: 60px;
                 justify-content: center;
-                background-color: black;
+                background-color:var(--black);
                 
     
 }
@@ -137,8 +143,8 @@ font-size: medium;
 footer {
  
     height: 75px   ;
-    background-color: white;
-    color: black;
+    background-color:var(--white);
+    color: var(--black);;
     text-align: center;
 }
 
@@ -147,7 +153,7 @@ footer {
 
     height:100vh;
     width: 100%;
-    background:black;
+    background:var(--black);;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -175,6 +181,6 @@ height: fit-content;
 }
 .swiper .swiper-button-prev, .swiper .swiper-button-next{
 
-color: white;
+color: var(--black);
 }
 
