--- a/games.css
+++ b/games.css
@@ -1,10 +1,15 @@
 
+:root {
+  --black:#000000;
+  --white: #ffffff;
+  --green: #008000;
+}
 
 
 body {
 
   height: 800px;
-  background-color: white;
+  background-color:var(--white);
   margin: 0;
 padding: 0;
 
@@ -12,7 +17,7 @@ padding: 0;
 
 header {
 height: 70px;
-background-color: white;
+background-color:var(--white);
 padding: 0px;
 
 
@@ -23,7 +28,7 @@ padding: 0px;
 header li {
 
     margin: 20px;;
-    color:rgb(0,0,0);
+    color: var(--black);;
     font-size: 20px;
     float: left;
     display: flex;
@@ -31,14 +36,14 @@ header li {
 
 a {
     text-decoration: none; 
-    color: black;
+    color: var(--black);;
 }
 
 
 
   .topnav a.active {
-    background-color: black;
-    color: white;
+    background-color:var(--black);
+    color: var(--white);
   }
   
   .topnav input[type=text] {
@@ -49,7 +54,7 @@ a {
     margin-right: 20px;
     font-size: 16px;
     background-color: grey;
-    color: white
+    color: var(--white);
   }
   
   @media screen and (max-width: 600px) {
@@ -68,7 +73,7 @@ a {
 
   a:hover{
 
-    color: black;
+    color: var(--black);;
     background-color:grey
   
   
@@ -96,8 +101,8 @@ a {
   footer{
  
     height: 75px   ;
-    background-color: white;
-    color: black;
+    background-color:var(--white);
+    color: var(--black);;
     text-align: center;
     
 }
@@ -106,7 +111,7 @@ a {
 .container-slideshow{
 
     display: inline-block;
-    width: 100%;¨
+    width: 100%;
     height: 10%;
     display: flex;
     justify-content: center;
@@ -118,7 +123,7 @@ a {
     
   height: 50px;
   width: 120px;
-  background-color: green;
+  background-color:var(--green);
   font-size: medium;
     }
     
@@ -145,7 +150,7 @@ width: 100%;
 }
 .swiper .swiper-button-prev, .swiper .swiper-button-next{
 
-color: white;
+  color: var(--black);;
 
 
 }
