--- a/main.css
+++ b/main.css
@@ -16,13 +16,46 @@ padding: 0;
 
 header {
 height: 70px;
-background-color:var(--white);
 padding: 0px;
+background-color:var(--white);
+}
 
+#range-slider{
 
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 10vh;
+ 
+}
+.main{
+ width: 170px;
+ background-color:var(--black);
+ border-radius: 5px;
+ padding: 10px;
+}
+
+#brightness-range{
+
+width: 100%;
+-webkit-appearance: none;
+background-color: #e4e4e4;
+height: 10px;
+outline: none;
+cursor: pointer;
+}
+#brightness-range::-webkit-slider-thumb {
+-webkit-appearance: none;
+width: 25px;
+height: 25px;
+border-radius: 50%;
+cursor: pointer;
+background-color: #22438c;
 
 
 }
+
+
 
 header li {
 
@@ -84,7 +117,6 @@ ul {
   height: 400px;
     margin: 0;
 
-
 }
 
 nav {
@@ -141,10 +173,10 @@ font-size: medium;
 
 footer {
  
-    height: 75px   ;
-    background-color:var(--white);
+    height: 100px;
     color: var(--black);;
     text-align: center;
+    background-color:var(--white);
 }
 
 
@@ -251,6 +283,15 @@ transform: translateX(50px);
 
 
 
+}
+.down-line{
+
+
+
+  height:2px;
+  border-width:0;
+  color:red;
+  background-color:red
 }
 
 
