--- a/about us.css
+++ b/about us.css
@@ -1,18 +1,7 @@
-:root {
-  --black:#000000;
-  --white: #ffffff;
-  --grey: #808080;
-}
-
-
 header {
     height: 70px;
-    background-color:var(--white);
-    padding: 0px;
-    position: sticky;
-    top: 0;
-    z-index: 7;
-
+    background-color: white;
+    padding: 0px;¨
 
 
 
@@ -28,11 +17,11 @@ header {
 
     a {
         text-decoration: none; 
-        color:var(--black);
+        color: black;
     }
     .topnav a.active {
-        background-color:var(--black);
-        color:var(--white);
+        background-color: black;
+        color: white;
       }
 
       .topnav input[type=text] {
@@ -42,8 +31,8 @@ header {
         margin-top: 20px;
         margin-right: 20px;
         font-size: 16px;
-        background-color:var(--grey);
-        color:var(--white);
+        background-color: grey;
+        color: white
       }
 
       @media screen and (max-width: 600px) {
@@ -62,7 +51,7 @@ header {
 
       nav {
       height: 500px;
-      background-color:var(--grey);
+      background-color:grey
       
      
 
@@ -78,7 +67,7 @@ header {
     section {
 
       height: 500px;
-      background-color:var(--grey);
+      background-color: grey;
 
     }
 
@@ -95,39 +84,8 @@ header {
     }
     footer {
       height: 75px   ;
-      background-color:var(--white);
-      color:var(--black);
+      background-color: white;
+      color: black;
       text-align: center;
  
     }
-
-    nav img {
-
-   
-   margin-left: 225px;
-   position: relative;
-   padding: 30px;
-    }
-
-    nav h1 {
-      margin-left: 120px;
-      position:relative; bottom:35px;
-      font-size: 25px ;
-
-    }
-
-    nav h2 {
-      padding-left: 250px;
-      position:relative; bottom:85px;
-      font-size: 25px ;
-
-    
-    }
-    nav h3 {
-      margin-left: 1150px;
-      position:relative; bottom: 135px;
-      font-size: 25px ;
-
-    }
-
-    
