hhRevert "Merge branch 'main' of https://github.com/Adam3362/RAG336"
This reverts commit 02010eb6a8e41410eb270b01c97ade9711afc523, reversing
changes made to 81a10bb4d579ca918c2ac6091b0e0378bf364a93.

--- a/console.css
+++ b/console.css
@@ -55,11 +55,10 @@ a {
 
 .pascal {
 
-  height: 50px;
+  height: 100px;
   width: 200px;
-  background-color: black;
+  background-color: white;
   font-size: medium;
-  color: white;
 }
 
 .pascal1 {
@@ -93,9 +92,9 @@ a {
 }
 
 
-.containerknappar{
+.container-knappar{
 
-      height: 50px;
+      
       display: flex;
       column-gap: 255px;
       justify-content: center;
