--- a/main.css
+++ b/main.css
@@ -1,8 +1,6 @@
 :root {
   --black:#000000;
   --white: #ffffff;
-  --grey: #808080;
-
 }
 
 
@@ -14,14 +12,12 @@ body  {
     margin: 0;
 padding: 0;
 
+
 }
 
 header {
 height: 70px;
 padding: 0px;
-position: sticky;
-top: 0;
-z-index: 7;
 
 #range-slider{
 
@@ -61,7 +57,7 @@ background-color: #22438c;
 
 
 header li {
-
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 20px;;
   color:var(--black);
   font-size: 20px;
@@ -71,7 +67,7 @@ header li {
 
 a {
   text-decoration: none; 
-  color: var(--black);
+  color: var(--black);;
 }
 
   .topnav a.active {
@@ -86,7 +82,7 @@ a {
     margin-top: 20px;
     margin-right: 20px;
     font-size: 16px;
-    background-color:var(--grey);
+    background-color: grey;
     color:var(--white);
   }
   
@@ -104,15 +100,15 @@ a {
     }
   }
 
-
-a:hover{
+  
+  a:hover{
 
   color: var(--black);
-  background-color:var(--grey);
+  background-color:grey
 
 
 
-}
+  }
 
 
 ul {
@@ -127,11 +123,11 @@ nav {
   background-color:var(--white);
   height: 400px;
 
-  text-decoration: none; 
-  color: var(--black);;
+    text-decoration: none; 
+    color: var(--black);;
 
-  text-align: center;
-  padding: 40px;
+    text-align: center;
+    padding: 40px;
 
 }
 
@@ -139,12 +135,12 @@ nav {
 
 
 .pascal {
-  
+    
 height: 50px;
 width: 120px;
 background-color:var(--white);
 font-size: medium;
-}
+  }
 
   .pascal1 {
     
@@ -161,8 +157,8 @@ font-size: medium;
         background-color:var(--white);
         font-size: medium;
 
-      
-        }
+        
+          }
 
           .container {
             padding: 150px;
@@ -191,7 +187,6 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    
 
 
 
@@ -209,8 +204,8 @@ height: fit-content;
 
 .swiper-slide img{
 
-  width: 100%;
-  
+    width: 100%;
+    
 
 
 }
@@ -297,5 +292,6 @@ transform: translateX(50px);
   color:red;
   background-color:red
 }
+
 
 
