Revert "riktiga hemsidan officalllll"
This reverts commit ee675278c2197e82b86c5dd2d27bcf5bbcd4fd7a.

--- a/console.css
+++ b/console.css
@@ -1,9 +1,11 @@
-
 header {
   height: 70px;
   background-color: white;
   padding: 0px;
-  ¨
+  position: sticky;
+  top: 0;
+  z-index: 7;
+
 }
 
 header li {
@@ -69,17 +71,17 @@ a {
   width: 200px;
   background-color: white;
   font-size: medium;
-
+  
 }
 
 .pascal2 {
-
+  
   height: 100px;
   width: 200px;
   background-color: white;
   font-size: medium;
 
-
+  
 }
 
 .container {
@@ -88,7 +90,7 @@ a {
   column-gap: 500px;
   align-items: center;
   background-color: :-moz-only-whitespace;
-
+  
 
 
 }
@@ -101,38 +103,4 @@ a {
       column-gap: 255px;
       justify-content: center;
       border: 100px;
-}
-.container1 {
-  padding: 150px;
-  display: flex;
-  column-gap: 500px;
-  align-items: center;
-  background-color: :-moz-only-whitespace;
-  
-}
-
-.pascal3 {
-  height: 100px;
-  width: 280px;
-  background-color: white;
-  font-size: medium;
-
-
-}
-
-.pascal4 {
-  height: 100px;
-  width: 280px;
-  background-color: white;
-  font-size: medium;
-
-
-
-}
-footer {
- 
-  height: 75px   ;
-  background-color:var(--white);
-  color: var(--black);;
-  text-align: center;
 }
