--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 :root {
-  --black: #000000;
+  --black:#000000;
   --white: #ffffff;
   --grey: #808080;
 
@@ -7,21 +7,21 @@
 
 
 
-body {
+body  {
 
-  height: 1300px;
-  background-color: var(--white);
-  margin: 0;
-  padding: 0;
+    height: 1300px;
+    background-color:var(--white);
+    margin: 0;
+padding: 0;
 
 }
 
 header {
-  height: 70px;
-  background-color: var(--white);
-  padding: 0px;
-  top: 0;
-  z-index: 7;
+height: 70px;
+background-color:var(--white);
+padding: 0px;
+top: 0;
+z-index: 7;
 
 
 
@@ -30,57 +30,53 @@ header {
 
 header li {
 
-  margin: 20px;
-  ;
-  color: var(--black);
+  margin: 20px;;
+  color:var(--black);
   font-size: 20px;
   float: left;
   display: flex;
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none; 
   color: var(--black);
 }
 
-.topnav a.active {
-  background-color: var(--black);
-  color: var(--white);
-}
-
-.topnav input[type=text] {
-  float: right;
-  padding: 6px;
-  border: none;
-  margin-top: 20px;
-  margin-right: 20px;
-  font-size: 16px;
-  background-color: var(--grey);
-  color: var(--white);
-}
-
-@media screen and (max-width: 600px) {
-
-  .topnav a,
+  .topnav a.active {
+    background-color:var(--black);
+    color: var(--white);
+  }
+  
   .topnav input[type=text] {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 20px;
+    margin-right: 20px;
+    font-size: 16px;
+    background-color:var(--grey);
+    color:var(--white);
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a, .topnav input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    .topnav input[type=text] {
+      border: 1px solid #ccc;
+    }
   }
 
-  .topnav input[type=text] {
-    border: 1px solid #ccc;
-  }
-}
 
-
-a:hover {
+a:hover{
 
   color: var(--black);
-  background-color: var(--grey);
+  background-color:var(--grey);
 
 
 
@@ -88,21 +84,20 @@ a:hover {
 
 
 ul {
-  background-color: var(--white);
-  height: 100px;
-  margin: 0;
+  background-color:var(--white);
+  height: 400px;
+    margin: 0;
 
 
 }
 
 nav {
 
-  background-color: var(--white);
+  background-color:var(--white);
   height: 400px;
 
-  text-decoration: none;
-  color: var(--black);
-  ;
+  text-decoration: none; 
+  color: var(--black);;
 
   text-align: center;
   padding: 40px;
@@ -113,101 +108,98 @@ nav {
 
 
 .pascal {
-
-  height: 50px;
-  width: 120px;
-  background-color: var(--white);
-  font-size: medium;
+  
+height: 50px;
+width: 120px;
+background-color:var(--white);
+font-size: medium;
 }
 
-.pascal1 {
+  .pascal1 {
+    
+    height: 50px;
+    width: 120px;
+    background-color:var(--white);
+    font-size: medium;
+      }
+     
+      .pascal2 {
+    
+        height: 50px;
+        width: 120px;
+        background-color:var(--white);
+        font-size: medium;
 
-  height: 50px;
-  width: 120px;
-  background-color: var(--white);
-  font-size: medium;
-}
+      
+        }
 
-.pascal2 {
-
-  height: 50px;
-  width: 120px;
-  background-color: var(--white);
-  font-size: medium;
-
-
-}
-
-.container {
-  padding: 150px;
-  display: flex;
-  column-gap: 60px;
-  justify-content: center;
-  background-color: var(--black);
-
-
+          .container {
+            padding: 150px;
+            display: flex;
+                column-gap: 60px;
+                justify-content: center;
+                background-color:var(--black);
+                
+    
 }
 
 footer {
-
-  height: 75px;
-  background-color: var(--white);
-  color: var(--black);
-  ;
-  text-align: center;
+ 
+    height: 75px   ;
+    background-color:var(--white);
+    color: var(--black);;
+    text-align: center;
 }
 
 
 .container1 {
 
-  height: 100vh;
-  width: 100%;
-  background: var(--black);
-  ;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
+    height:100vh;
+    width: 100%;
+    background:var(--black);;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 
 
 
 
 
 }
+.swiper{
 
-.swiper {
-
-  width: 80%;
-  height: fit-content;
+width: 80%;
+height: fit-content;
 
 
 
 }
 
-.swiper-slide img {
+.swiper-slide img{
 
   width: 100%;
-
+  
 
 
 }
+.swiper .swiper-button-prev, .swiper .swiper-button-next{
 
-.swiper .swiper-button-prev,
-.swiper .swiper-button-next {
-
-  color: var(--black);
+color: var(--black);
 }
 
 .container4 {
-  text-align: center;
-  position: absolute;
-  width: 80px;
-  height: 30px;
-  top: 50%;
-  left:50%
+text-align: center;
+position: absolute;
+width: 80px;
+height: 30px;
+top:50%
+left:50%
+
+
 }
 
-switch {
+switch{
 
   position: relative;
   display: inline-block;
@@ -218,95 +210,91 @@ switch {
 
 }
 
-.slider {
+.slider{
 
 
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: .4s;
-  border-radius: 34px;
-
-}
-
-.switch input {
-  display: none;
-}
-
-.slider:before {
-
-  position: absolute;
-  content: "";
-  height: 30px;
-  width: 30px;
-  left: 5px;
-  background-color: var(--grey);
-  transition: 0, 4s;
-  border-radius: 50px;
-}
-
-input:checked+.slider {
-
-  background-color: black;
-
-
+position: absolute;
+cursor: pointer;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-color: #ccc;
+transition: .4s;
+border-radius: 34px;
 
 }
 
-input:checked+.slider:before {
+.switch input {display: none;}
+  
+.slider:before
+{
 
-  transform: translateX(50px);
+position: absolute;
+content: "";
+height: 30px;
+width: 30px;
+left: 5px;
+background-color:var(--grey);
+transition: 0,4s;
+border-radius: 50px;
+}
+
+input:checked + .slider
+{
+
+background-color: black;
 
 
 
 }
 
+input:checked + .slider:before
+{
 
-#range-slider {
+transform: translateX(50px);
+
+
+
+}
+
+
+#range-slider{
 
   align-items: center;
   display: flex;
   justify-content: center;
   height: 10vh;
-  float: left;
-
+ 
+}
+.main{
+ width: 170px;
+ background-color:var(--black);
+ border-radius: 5px;
+ padding: 10px;
 }
 
-.main {
-  width: 170px;
-  background-color: var(--black);
-  border-radius: 5px;
-  padding: 10px;
-  float: left;
+#brightness-range{
+
+width: 100%;
+-webkit-appearance: none;
+background-color: #e4e4e4;
+height: 10px;
+outline: none;
+cursor: pointer;
 }
-
-#brightness-range {
-
-  width: 100%;
-  -webkit-appearance: none;
-  background-color: #e4e4e4;
-  height: 10px;
-  outline: none;
-  cursor: pointer;
-  float: left;
-}
-
 #brightness-range::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  cursor: pointer;
-  background-color: #22438c;
-  float: left;
+-webkit-appearance: none;
+width: 25px;
+height: 25px;
+border-radius: 50%;
+cursor: pointer;
+background-color: #22438c;
+
 
 }
 
-.splash {
+.splash{
 
   position: fixed;
   left: 0;
@@ -319,86 +307,51 @@ input:checked+.slider:before {
   text-align: center;
   padding-top: 45vh;
 
-
-
-}
-
-
-
-.splash.display-none {
-  position: fixed;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: #000000;
-  z-index: -10;
-  color: white;
-  text-align: center;
-  line-height: 90vh;
-  transition: all 0, 5s;
-
-}
-
-@keyframes fadeIn {
-  to {
+  
+  
+  }
+  
+  
+  
+  .splash.display-none{
+    position: fixed;
     opacity: 0;
-
-
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #000000;
+    z-index: -10;
+    color: white;
+    text-align: center;
+    line-height: 90vh;
+    transition: all 0,5s;
+  
+  }
+  
+  @keyframes fadeIn{
+    to{
+      opacity: 0;
+  
+  
+    }
+  
+  }
+  
+  .fade-in{
+    opacity: 1;
+    animation: forwards ease-in 1s;
+    font-family:fantasy;
+  
+  
+  
+  
   }
 
-}
-
-.fade-in {
-  opacity: 1;
-  animation: forwards ease-in 1s;
-  font-family: fantasy;
 
 
 
 
-}
 
 
 
-.index-ul {
-  display: flex;
-  flex-direction: row;
-  background: none;
-  align-items: center;
-  
-}
-
-
-
-.index-ul a {
-  display: block;
-  color: var(--black);
-  text-decoration: none;
-  text-align: center;
-  background-color: var(--white);
-  font-size: 25px;
-  width: 150px;
-  padding: 15px;
-  box-shadow: var(--black) 5px 5px;
-  border-right: solid 1px;
-  border-bottom: solid 1px;
-}
-
-
-.index-ul a:hover {
-  color: var(--black);
-  background-color: var(--grey);
-}
-
-.index-ul a:active {
-  transform: translateY(3px) translateX(3px);
-  box-shadow: var(--grey) 0 0;
-  border-color: var(--grey)
-}
-
-.index-ul li {
-  list-style: none;
-  padding: 100px;
-}
